<resources>
    <string name="app_name">Monitor</string>
    <string name="title_activity_check_root">CheckRootActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="monitor">Monitor</string>
    <string name="device">Device</string>
    <string name="root">Root</string>
    <string name="detection">Detection</string>
    <string name="check_su">checkSU</string>
    <string name="check_file">checkFile</string>
    <string name="check_permission">checkPermission</string>
    <string name="check_build">checkBuild</string>
    <string name="check_use_so">checkUseSo</string>
    <string name="back">Back</string>
    <string name="hint_">plz click the button</string>
    <string name="check_frida">checkFrida</string>
    <string name="frida">Frida</string>
    <string name="hook">Hook</string>
    <string name="check_Hook">checkHook</string>
    <string name="xposed">Xposed</string>
    <string name="check_Xposed">checkXposed</string>
    <string name="so_check_Xposed">soCheckXposed</string>
    <string name="check_serial">checkSerial</string>
    <string name="check_disk">checkDisk</string>
    <string name="check_kernel">checkKernel</string>
    <string name="check_cpu">checkCpu</string>
    <string name="check_system">checkSystem</string>
    <string name="check_Emu">checkEmu</string>
    <string name="check_cloud">checkCloud</string>
    <string name="check_sandbox">checkSandbox</string>
    <string name="env">Environment</string>
</resources>