<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CheckDeviceActivity"
        android:background="@color/white"
        android:id="@+id/deviceCheck">

        <TextView
            android:id="@+id/Device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/device"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintHorizontal_bias=".15" />

        <TextView
            android:id="@+id/detectionHook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detection"
            android:textColor="@color/black"
            android:textSize="56sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/Device"
            app:layout_constraintTop_toBottomOf="@+id/Device"
            app:layout_constraintVertical_bias="0" />


        <Button
            android:id="@+id/checkSerial"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_serial"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.047" />

        <Button
            android:id="@+id/checkDisk"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_disk"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.047" />

        <Button
            android:id="@+id/checkSystem"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_system"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.21" />

        <Button
            android:id="@+id/checkCpu"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_cpu"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.21" />

        <Button
            android:id="@+id/checkKernel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_kernel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.361" />

        <Button
            android:id="@+id/backDevice"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/back"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.361" />

        <View
            android:id="@+id/view"
            android:layout_width="320dp"
            android:layout_height="4dp"
            android:background="@color/purple_700"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/outputDevice"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@drawable/output_bg"
            android:elevation="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            android:text="@string/hint_"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionHook"
            app:layout_constraintVertical_bias="0.848"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>