<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nuthecz.monitordevice.CheckEnvActivity">

        <TextView
            android:id="@+id/Env"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/env"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintHorizontal_bias=".15" />

        <TextView
            android:id="@+id/detectionEnv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detection"
            android:textColor="@color/black"
            android:textSize="56sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/Env"
            app:layout_constraintTop_toBottomOf="@+id/Env"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/checkEmu"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_Emu"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionEnv"
            app:layout_constraintVertical_bias="0.139" />

        <Button
            android:id="@+id/checkCloud"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_cloud"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/checkEmu"
            app:layout_constraintTop_toBottomOf="@+id/checkEmu"
            app:layout_constraintVertical_bias="0.12" />

        <Button
            android:id="@+id/checkSandbox"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/check_sandbox"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/checkEmu"
            app:layout_constraintTop_toBottomOf="@+id/checkEmu"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/backEnv"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/back"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/checkEmu"
            app:layout_constraintTop_toBottomOf="@+id/checkEmu"
            app:layout_constraintVertical_bias="0.58" />

        <View
            android:id="@+id/view"
            android:layout_width="4dp"
            android:layout_height="340dp"
            android:background="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectionEnv"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/outputEnv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/output_bg"
            android:elevation="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/hint_"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/detectionEnv"
            app:layout_constraintVertical_bias="0.391"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>